[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsWorld"
version = "1.2.0"
authors = [
  { name="Curtis L. Olson", email="curtolson@flightgear.org" },
]
description = "Visual system experiments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NorthStarUAS/"

[project.scripts]
"tile_builder" = "nsWorld.tile_builder:main"

[tool.hatch.build.targets.wheel]
packages = [ "nsWorld" ]
artifacts = [ "nsWorld/data/*" ]
