[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nstWorld"
version = "1.3.0"
authors = [
  { name="Curtis L. Olson", email="curtolson@flightgear.org" },
]
description = "Simple tile-based sat + dem visual system."
readme = "Visuals/README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NorthStarUAS/"

[project.scripts]
"tile_builder" = "nstWorld.tile_builder:main"

[tool.hatch.build.targets.wheel]
packages = [ "Visuals/nstWorld" ]
artifacts = [ "Visuals/nstWorld/data/*" ]
