[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nstSimulator"
version = "1.3.3"
authors = [
  { name="Curtis L. Olson", email="curtolson@flightgear.org" },
]
description = "Simulator related modules."
readme = "nstSimulator/README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NorthStarUAS/"

[project.scripts]
"tile_builder" = "nstSimulator.world.tile_builder:main"

[tool.hatch.build.targets.wheel]
packages = [ "nstSimulator" ]
artifacts = [ "nstSimulator/world/data/*" ]
